Refactor: Separated MainActivity functions into helper classes
- Moved map-related functions to MapHelper
- Moved location-related functions to LocationHelper
- Moved autocomplete-related functions to AutocompleteHelper
- Improved project structure and maintainability

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/etStart"
             android:hint="Enter starting point"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/etDestination"
             android:hint="Enter destination"
             android:layout_width="match_parent"
