--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,33 +10,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="12dp"
+        android:layout_margin="12dp"
+        android:elevation="6dp"
+        android:background="@drawable/bg_card"
+        android:layout_alignParentTop="true">
 
         <AutoCompleteTextView
             android:id="@+id/etStart"
             android:hint="Enter starting point"
+            android:padding="12dp"
+            android:layout_marginBottom="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_input"
+            android:drawableStart="@drawable/ic_start"
+            android:drawablePadding="8dp"
+            android:textSize="16sp"/>
 
         <AutoCompleteTextView
             android:id="@+id/etDestination"
             android:hint="Enter destination"
+            android:padding="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_input"
+            android:drawableStart="@drawable/ic_destination"
+            android:drawablePadding="8dp"
+            android:textSize="16sp"/>
 
         <Button
             android:id="@+id/btnRoute"
             android:text="Show Route"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00796B"
+            android:textColor="@android:color/white"
+            android:paddingVertical="10dp"
+            android:elevation="4dp"
+            android:layout_marginTop="4dp"/>
 
     </LinearLayout>
 
     <fragment
         android:id="@+id/map"
-        android:layout_below="@id/input_section"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_below="@id/input_section"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"/>
 </RelativeLayout>
